crates/solidity-v2/testing/snapshots/diagnostics_output/syntax/multiple_override_specifiers/functions/generated/slang/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: Only a single override specifier can be provided.
   ╭─[input.sol:5:37]
   │
 5 │     function test() public override override {}
   │                                     ────┬───  
   │                                         ╰───── Error occurred here.
───╯
